# dataguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  tests.yml
dataguard/: __init__.py  checks.py  cli.py  core.py  exceptions.py  pandas_engine.py  report.py  rules.py  spark_engine.py  sql_dialects.py  sql_engine.py  utils.py
examples/: basic_validation.py  config_driven.py  sql_validation.py
tests/: test_checks.py  test_core.py  test_report.py  test_sql_engine.py
