[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqguard"
version = "0.1.0"
description = "Lightweight data quality validation framework for big data pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Zhang Zhen", email = "zhangzhen9798@users.noreply.github.com"},
]
keywords = ["data-quality", "validation", "spark", "pandas", "big-data", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pandas>=1.3.0,<3.0.0",
    "numpy>=1.20.0,<3.0.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/zhangzhen9798/dataguard"
Repository = "https://github.com/zhangzhen9798/dataguard"
Issues = "https://github.com/zhangzhen9798/dataguard/issues"

[tool.setuptools.packages.find]
include = ["dataguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
